--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "npm": "^6.14.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
+    "svelte": "^3.24.0",
+    "svelte-loader": "^2.13.6",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
