--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
     "idb": "^5.0.2",
+    "mapbox-gl": "^1.11.1",
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.25.3",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "npm": "^6.14.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "svelte": "^3.24.0",
     "svelte-loader": "^2.13.6",
+    "svelte-preprocess-sass": "^0.2.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
