--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "cloudinary-core": "^2.11.1",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
+    "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.3.0",
     "idb": "^5.0.2",
     "mapbox-gl": "^1.11.1",
     "mini-css-extract-plugin": "^0.9.0",
