--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "moment": "^2.25.3",
     "node-sass": "^4.14.1",
+    "nouislider": "^14.6.1",
     "npm": "^6.14.2",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
