--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "src/app.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server",
-    "watch": "webpack --watch"
+    "build": "webpack --config webpack.prod.js",
+    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "watch": "webpack --watch --config webpack.dev.js"
   },
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
@@ -31,6 +31,7 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^5.1.2",
     "workbox-precaching": "^5.1.3",
     "workbox-webpack-plugin": "^5.1.3"
   }
