--- a/package.json
+++ b/package.json
@@ -9,20 +9,29 @@
     "watch": "webpack --watch --config webpack.dev.js"
   },
   "dependencies": {
-    "clean-webpack-plugin": "^3.0.0",
     "cloudinary-core": "^2.11.1",
+    "idb": "^5.0.2",
+    "mapbox-gl": "^1.11.1",
+    "nouislider": "^14.6.1",
+    "npm": "^6.14.2"
+  },
+  "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
+    "eslint": "^7.7.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-svelte3": "^2.7.3",
     "favicons-webpack-plugin": "^4.2.0",
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
-    "idb": "^5.0.2",
-    "mapbox-gl": "^1.11.1",
     "mini-css-extract-plugin": "^0.9.0",
-    "moment": "^2.25.3",
     "node-sass": "^4.14.1",
-    "nouislider": "^14.6.1",
-    "npm": "^6.14.2",
+    "preload-webpack-plugin": "^3.0.0-beta.4",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
     "svelte": "^3.24.0",
